# up-server

./: .env  Cargo.toml  README.md
migrations/2021-03-16-054842_users/: up.sql
src/: main.rs  schema.rs
