[package]
name = "up-server"
version = "0.1.0"
authors = ["vapvin <tpehdj12@daum.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.4.7"
features = ["private-cookies"]

[dependencies.rocket_contrib]
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]